<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >
   
        <Button android:id="@+id/sensor_list"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
		android:text="@string/sensor_list"
		android:textColor="@color/color_black"
		android:textSize="30sp"
		android:shadowDx="0"
		android:shadowDy="0"
		android:shadowRadius="5"
		android:layout_marginTop="30px"
		android:onClick="sensorlistclick"
	/>
    
    <Button android:id="@+id/proximity"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
		android:text="@string/proximity_sensor"
		android:textColor="@color/color_black"
		android:textSize="30sp"
		android:shadowDx="0"
		android:shadowDy="0"
		android:shadowRadius="5"
		android:layout_marginTop="30px"
		android:onClick="sensorproximityclick"
	/>
    
    
      <Button android:id="@+id/acceleration"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
		android:text="@string/motion_sensor"
		android:textColor="@color/color_black"
		android:textSize="30sp"
		android:shadowDx="0"
		android:shadowDy="0"
		android:shadowRadius="5"
		android:layout_marginTop="30px"
		android:onClick="sensoraccelerationclick"
	/>
   
     <Button android:id="@+id/light"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
		android:text="@string/light_sensor"
		android:textColor="@color/color_black"
		android:textSize="30sp"
		android:shadowDx="0"
		android:shadowDy="0"
		android:shadowRadius="5"
		android:layout_marginTop="30px"
		android:onClick="sensorlightclick"
	/>
     
     <Button android:id="@+id/magnetic"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
		android:text="@string/magnetic_sensor"
		android:textColor="@color/color_black"
		android:textSize="30sp"
		android:shadowDx="0"
		android:shadowDy="0"
		android:shadowRadius="5"
		android:layout_marginTop="30px"
		android:onClick="sensormagneticclick"
	/>
     
     <Button android:id="@+id/gyroscope"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
		android:text="@string/gyroscope_sensor"
		android:textColor="@color/color_black"
		android:textSize="30sp"
		android:shadowDx="0"
		android:shadowDy="0"
		android:shadowRadius="5"
		android:layout_marginTop="30px"
		android:onClick="sensorgyroscopeclick"
	/>
     
     <Button android:id="@+id/orientation"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
		android:text="@string/orientation_sensor"
		android:textColor="@color/color_black"
		android:textSize="30sp"
		android:shadowDx="0"
		android:shadowDy="0"
		android:shadowRadius="5"
		android:layout_marginTop="30px"
		android:onClick="sensororientationclick"
	/>
     
     <Button android:id="@+id/pressure"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
		android:text="@string/pressure_sensor"
		android:textColor="@color/color_black"
		android:textSize="30sp"
		android:shadowDx="0"
		android:shadowDy="0"
		android:shadowRadius="5"
		android:layout_marginTop="30px"
		android:onClick="sensorpressureclick"
	/>
     
    </LinearLayout>
</ScrollView>